update security config, update habit service method to disable custom to-do list items