@@ -10,6 +10,7 @@ import greencity.dto.habit.CustomHabitDtoResponse;
 import greencity.dto.habit.HabitDto;
 import greencity.dto.habittranslation.HabitTranslationDto;
 import greencity.dto.notification.LikeNotificationDto;
+import greencity.dto.todolistitem.CustomToDoListItemRequestDto;
 import greencity.dto.todolistitem.ToDoListItemResponseWithStatusDto;
 import greencity.dto.user.UserProfilePictureDto;
 import greencity.dto.user.UserVO;
@@ -456,12 +457,15 @@ public class HabitServiceImpl implements HabitService {
                 .forEach(itemToUpdate -> {
                     item.setStatus(ToDoListItemStatus.valueOf(itemToUpdate.getStatus()));
                     item.setText(itemToUpdate.getText());
+                    customToDoListItemRepo.save(item);
                 }));
 
-        customToDoListItemRepo.deleteAll(customToDoListItems.stream()
-            .filter(item -> habitDto.getCustomToDoListItemDto().stream()
-                .noneMatch(itemToUpdate -> item.getId().equals(itemToUpdate.getId())))
-            .collect(Collectors.toList()));
+        List<CustomToDoListItem> itemsToDisable = customToDoListItems.stream()
+                .filter(item -> habitDto.getCustomToDoListItemDto().stream()
+                        .noneMatch(itemToUpdate -> item.getId().equals(itemToUpdate.getId())))
+                .map(item -> item.setStatus(ToDoListItemStatus.DISABLED))
+                .toList();
+        customToDoListItemRepo.saveAll(itemsToDisable);
     }
 
     private void updateHabitTranslationsForCustomHabit(CustomHabitDtoRequest habitDto, Habit habit) {
